[project]
name = "f3l"
version = "0.1.0"
description = ""
authors = [
    {name = "syagrovs",email = "max.syagrovskyy@mail.utoronto.ca"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [{include = "f3l", from = "src"}]

[tool.poetry.scripts]
f3l = "f3l.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
